2008-02-02  Dominic Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version #; automake warning about required AM_PROG_CC_C_O (#513858)
	
2008-02-02  Jan Arne Petersen <jpetersen@jpetersen.org>

	* Migrate to gio (#513778)
	
2008-01-29  Christian Persch  <chpe@gnome.org>

	* test-display.c: (view_pixbuf): Add the filename to the window title.
	Bug #512797.

2008-01-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version #to 2.20.0
	
2008-01-19  Bertram Felgenhauer <bertram.felgenhauer@googlemail.com>

	* Bug 500787 - translation gets ignored when rendering an svg with cairo in the context of a cairo_push_group()
	
2007-11-27  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: 499386 - rsvg_handle_close leads to segfault
	* rsvg-private.h: Ditto
	
2007-09-24  Dom Lachowicz <domlachowicz@gmail.com>

	* gdk-pixbuf-loader/io-svg.c: svgz support is optional (#473836, Lucas Rocha)
	* rsvg-cairo-draw.c: Fix memory leak (#475841, Matthias Clasen)
	
2007-08-29  Dom Lachowicz <domlachowicz@gmail.com>

	* NEWS: update
	* configure.in: 2.18.2

2007-08-21  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-styles.c: fix a typo preventing the compilation.

2007-08-20  Dom Lachowicz <domlachowicz@gmail.com>

	* NEWS: update
	* configure.in: 2.18.1
	
2007-08-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-styles.c: Basic support for SVG 1.1's text-rendering and shape-rendering properties (#464599)
	http://www.w3.org/TR/SVG/painting.html#ShapeRenderingProperty
	* rsvg-styles.h: Ditto
	* rsvg-cairo-draw.c: Ditto
	
2007-07-24  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version to 2.18.0
	
2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo-render.h:
	* rsvg-cairo-draw.c:
	* rsvg-cairo-clip.c:
	* rsvg-cairo-render.c: Rendering magnified SVGs with rsvg-cairo produces blurry images (#412682)
	From Bertram Felgenhauer
	
2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>
