@@ -215,26 +215,6 @@ AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_VERSION)
 AM_CONDITIONAL(HAVE_GTK, test "x$have_gtk" = "xyes")
 
-test_gnome_print=true
-AC_ARG_ENABLE(gnome-print, [  --enable-gnome-print  Use Gnome Print for printing SVGs [default = auto]],
-			 test_gnome_print="$enableval")
-
-have_gnome_print=no
-if test "x$test_gnome_print" != "xno"; then
-   PKG_CHECK_MODULES(GNOME_PRINT, \
-		     libgnomeprint-2.2 >= 2.2.0	\
-		     libgnomeprintui-2.2 >= 2.2.0,	\ 
-		     have_gnome_print=yes,		\
-		     have_gnome_print=no)
-fi
-
-if test "x$have_gnome_print" = "xyes"; then
-   GNOME_PRINT_CFLAGS="$GNOME_PRINT_CFLAGS -DHAVE_GNOME_PRINT=1"
-fi
-
-AC_SUBST(GNOME_PRINT_CFLAGS)
-AC_SUBST(GNOME_PRINT_LIBS)
-
 have_gdk_x11=no
 PKG_CHECK_MODULES(GDK_X11, gdk-x11-2.0 >= 2.0.0, have_gdk_x11=yes, have_gdk_x11=no)
 
@@ -375,7 +355,6 @@ librsvg-$LIBRSVG_VERSION
 	Build Netscape plugin:          ${build_mozilla_plugin}
 	Handle svgz files:              ${test_gsf}
 	Use GIO:                        ${test_gio}
-	Enable printing:		${have_gnome_print}
 	Use libcroco for css parsing:   ${test_croco}
 "
 
